Fixed i3blocks cpu usage problems

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,41 +1,1 @@
-# i3blocks config file
-# This is the personal config file for me. It is based on the generated one:
-# /etc/i3blocks.conf
-
-command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=15
-markup=none
-
-[mediaplayer]
-color=#00FFFF
-instance=pithos
-interval=-2
-signal=10
-
-[volume]
-color=#FF00FF
-label=♪
-instance=Master
-interval=-2
-signal=10
-
-[iface]
-color=#00FF00
-interval=10
-separator=true
-
-[cpu_usage]
-label=CPU:
-interval=-2
-min_width=CPU: 100.00%
-
-[memory]
-label=Mem free:
-interval=-2
-min_width=Mem free: idkw
-
-
-[time]
-color=#FF00FF
-command=date '+%m-%d-%Y %H:%M:%S'
-interval=1
+i3blocks.conf.heavy
